--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ code/stem
 llncs.cls
 model-eps-converted-to.pdf
 model.eps
-"relat\303\263rio.aux"
-"relat\303\263rio.log"
-"relat\303\263rio.out"
-"relat\303\263rio.tex"
+relatório.aux
+relatório.log
+relatório.out
+relatório.tex
 splncs04.bst
 
