--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 code/analise
 code/analise.py
-code/d_ola_1.txt
 code/pre_processing
 code/stem
 llncs.cls
 model-eps-converted-to.pdf
 model.eps
-relatório.aux
-relatório.log
-relatório.out
-relatório.tex
-splncs04.bst
-
+k-fold.eps
+k-fold-eps-converted-to.pdf
+texts/vocabulario.txt
